Initial commit for new template

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,5 +1,10 @@
 extends layout
 
 block content
+  if loggedIn
+    a(href="/create-bungalow") Become host
   h1= title
   p Welcome to #{title}
+  form(action='/bungalows', method='post')
+    input#text(type='input' class='search-input' name='text' placeholder='Where to?')
+    input(type="submit", value="Search")
