Update booking form's action, add hidden input

--- a/src/views/bungalow.pug
+++ b/src/views/bungalow.pug
@@ -14,13 +14,14 @@ block content
         ul
             li #{service}
     .book-card
-        form(action=`/bungalows/${bungalow.id}`, method='post')
+        form(action=`/bookings`, method='post')
             h4 #{bungalow.price} TRY / night
             label(for='checkInDate') Check-in date
             input#checkInDate(type='date' name='checkInDate' value='2022-09-10' )
             label(for='checkOutDate') Check-out date
             input#checkOutDate(type='date' name='checkOutDate' value='2022-09-13' )
             input(type="submit", value="Book Now")
+            input(type="hidden", name="bungalowId", id='bungalowId', value=`${bungalow.id}`)
     .reviews
         h3 Reviews of Bungalow #{bungalow.name}
         each review in bungalow.reviews
